fix button icon spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -260,7 +260,7 @@ body{
     margin-left: 10%;
     float: left;
 }
-.hangman, .bart-rpg, .beer-game, .ajax, .train{
+.hangman, .bart-rpg, .beer-game, .ajax, .train, .rec-bud{
     width:52%;
     margin-left: 4%;
 }
@@ -332,6 +332,20 @@ body{
     background-repeat: no-repeat;
     width: 267px;
 }
+
+.rb{
+    background-image: url(../images/quac.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.recipe{
+    background-image: url(../images/buddy.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 267px;
+}
+
 /**one class for the banner across each image**/
 .banner{
     height:22%; /*40px;*/
@@ -355,6 +369,17 @@ body{
     position: relative;
     left: 2px;
 }
+
+.icon-2{
+    position: relative;
+    left: 2px;
+}
+
+.icon-3{
+    position: relative;
+    left: 3px;
+}
+
 
 .title{
     height:30px;
